codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui2/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Charging (0s • esc to interrupt)              
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
                                                
⚡ Ask xcodex to do anything                     
                                                
  100% context left · ? for shortcuts
